# agent-uplink

./: .gitignore  CLAUDE.md  README.md  kata_helm_values.yml  pyproject.toml
.github/workflows/: docker-build.yml  integration-tests.yml  lint.yml  publish_module.yml
agent_uplink/: __main__.py  aws.py  bootstrap.py  cli.py  config.py  default_rules.yaml  docker_ops.py  git.py  k8s.py  kube.py  process.py  reaper.py  rules.py  secret.py  session.py  sshagent.py
agent_uplink/agents/: __init__.py  base.py
agent_uplink/agents/claude/: Dockerfile  __init__.py  agent.py  config.py  default_rules.yaml  dockerd-entrypoint.sh  entrypoint.sh  gitconfig  ssh_config
agent_uplink/claude_container/: Dockerfile  entrypoint.sh
agent_uplink/mitm_addon/: filter.py
docs/: architecture.md  aws-resigning.md  claude-agent.md  config-file.md  network-and-egress.md  rules.md
examples/: agent-uplink.yaml
examples/rules/: atlassian.yaml  codeartifact.yaml  ecr.yaml  git.yaml  gitlab.yaml  l4-passthrough.yaml  mine.yaml
repro/bedrock-load/: README.md  canary.py  driver.py  redirect.py  rules.json  run.sh  sink.py
tests/: README.md  conftest.py
tests/integration/: harness.py  test_credentials.py  test_dockerd.py  test_injector.py  test_network_policy.py  test_sigv4.py  test_ssh_egress.py  test_ssh_relay.py
tests/integration/testimage/: Dockerfile  echo.py
tests/unit/: test_agent_base.py  test_aws.py  test_bootstrap.py  test_claude_agent.py  test_claude_config.py  test_cli.py  test_config.py  test_git.py  test_k8s.py  test_kube.py  test_mitm_addon.py  test_process.py  test_reaper.py  test_rules.py  test_session.py  test_sshagent.py
