[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-uplink"
version = "0.0.1"
description = "Claude Sandbox"
readme = "README.md"
authors = [{ name = "Huw" }]
license = { file = "LICENSE" }

dependencies = [
    "keyring",
    "pyyaml",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/hoo29/agent-uplink"

[project.scripts]
agent-uplink = "agent_uplink.__main__:main"

[project.optional-dependencies]
tests = ["pytest"]
build = ["build"]

[tool.setuptools]
packages = [
    "agent_uplink",
    "agent_uplink.agents",
    "agent_uplink.agents.claude",
    "agent_uplink.mitm_addon",
]

[tool.setuptools.package-data]
agent_uplink = ["default_rules.yaml"]
"agent_uplink.agents.claude" = [
    "default_rules.yaml",
    "Dockerfile",
    "certs/*",
]
