[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-uplink"
version = "0.5.1"
description = "Agent Sandbox"
readme = "README.md"
authors = [{ name = "Huw" }]
license = { file = "LICENSE" }

dependencies = ["keyring", "pyyaml"]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/hoo29/agent-uplink"

[project.scripts]
agent-uplink = "agent_uplink.__main__:main"

[project.optional-dependencies]
tests = ["pytest"]
build = ["build"]
lint = ["pyright"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: requires a live k3s cluster (deploys namespaces, pods, policies)",
    "dockerd: in-pod dockerd smoke test; privileged pod on the default runtime",
]

[tool.pyright]

include = ["agent_uplink", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportUnusedImport = "error"
reportUnusedVariable = "error"


[tool.setuptools]
packages = [
    "agent_uplink",
    "agent_uplink.agents",
    "agent_uplink.agents.claude",
    "agent_uplink.mitm_addon",
]

[tool.setuptools.package-data]
agent_uplink = ["default_rules.yaml"]
"agent_uplink.agents.claude" = [
    "default_rules.yaml",
    "Dockerfile",
    "dockerd-entrypoint.sh",
    "gitconfig",
    "ssh_config",
]
